--- a/src/main/resources/org/pilirion/nakaza/components/page/BasePage.utf8.properties
+++ b/src/main/resources/org/pilirion/nakaza/components/page/BasePage.utf8.properties
@@ -1,1 +1,3 @@
 title=Nákaza
+one-required-label=Zadejte alespoň jeden štítek.
+one-participant-required=Zadejte alespoň jednoho účastníka daného příběhu.
