--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>Nákaza</name>
+
 	<repositories>
 		<repository>
 			<id>jboss-repo</id>
@@ -24,6 +25,7 @@
             </snapshots>
         </repository>
 	</repositories>
+
 	<dependencies>
 		<!-- WICKET DEPENDENCIES -->
 		<dependency>
@@ -180,7 +182,10 @@
             <version>1.4.7</version>
         </dependency>
     </dependencies>
+
 	<build>
+        <finalName>balhar</finalName>
+
 		<resources>
 			<resource>
 				<filtering>false</filtering>
@@ -244,6 +249,7 @@
             </plugin>
 		</plugins>
 	</build>
+
 	<properties>
 		<wicket.version>6.6.0</wicket.version>
 		<wicket-annotations.version>1.3.7</wicket-annotations.version>
