--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
 				</excludes>
 			</resource>
 		</resources>
+
 		<testResources>
 			<testResource>
 				<filtering>false</filtering>
@@ -214,7 +215,74 @@
 				</excludes>
 			</testResource>
 		</testResources>
+
 		<plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>1.5</version>
+
+                <dependencies>
+                    <dependency>
+                        <!-- specify the dependent JDBC driver here -->
+                        <groupId>postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>9.1-901.jdbc4</version>
+                    </dependency>
+                </dependencies>
+
+                <!-- common configuration shared by all executions -->
+                <configuration>
+                    <driver>org.postgresql.Driver</driver>
+                    <url>jdbc:postgresql://localhost:5432/postgres</url>
+                    <username>pia</username>
+                    <password>pia</password>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>drop-db-before-test-if-any</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <!-- need another database to drop the targeted one -->
+                            <autocommit>true</autocommit>
+                            <sqlCommand>drop database balhar</sqlCommand>
+                            <!-- ignore error when database is not avaiable -->
+                            <onError>continue</onError>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-database</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <!-- specific configuration for this execution -->
+                        <configuration>
+                            <!-- specify your SQL commands, can be all of the following configurations -->
+                            <autocommit>true</autocommit>
+                            <sqlCommand>create database balhar with owner pia</sqlCommand>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>fill-database</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <!-- specific configuration for this execution -->
+                        <configuration>
+                            <!-- specify your SQL commands, can be all of the following configurations -->
+                            <srcFiles>
+                                <srcFile>sql/nakaza20140102.sql</srcFile>
+                            </srcFiles>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
