--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
         <dependency>
             <groupId>com.googlecode.wicket-jquery-ui</groupId>
             <artifactId>wicket-jquery-ui</artifactId>
-            <version>6.7.0</version> <!-- or 1.5.10 -->
+            <version>${wicket.version}</version> <!-- or 1.5.10 -->
         </dependency>
         <dependency>
             <groupId>org.wicketstuff</groupId>
             <artifactId>wicketstuff-tinymce</artifactId>
-            <version>6.7.0</version>
+            <version>${wicket.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.wicket</groupId>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-datetime</artifactId>
-            <version>6.5.0</version>
+            <version>${wicket.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.wicket</groupId>
@@ -227,7 +227,7 @@
                         <!-- specify the dependent JDBC driver here -->
                         <groupId>postgresql</groupId>
                         <artifactId>postgresql</artifactId>
-                        <version>9.1-901.jdbc4</version>
+                        <version>${postgresql.version}</version>
                     </dependency>
                 </dependencies>
 
@@ -342,7 +342,7 @@
 	</build>
 
 	<properties>
-		<wicket.version>6.6.0</wicket.version>
+		<wicket.version>6.7.0</wicket.version>
 		<wicket-annotations.version>1.3.7</wicket-annotations.version>
 		<jetty.version>6.1.4</jetty.version>
 		<hibernate.version>3.5.1-Final</hibernate.version>
